--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
   link-downloader:
     build: .
     restart: always
-    image: fomik2/${DC_IMAGE_NAME}:${DC_TAG}
+    image: ${DC_IMAGE_NAME}:${DC_TAG}
     container_name: link-downloader
     volumes:
     - ./config/config.yaml:/config/config.yaml
