--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,11 @@ services:
     image: rabbitmq:3.10-management
     ports:
       - 5672:5672
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 15s
+      timeout: 15s
+      retries: 3
     
 
 
